--- a/src/main/resources/static/css/baseMonitor.css
+++ b/src/main/resources/static/css/baseMonitor.css
@@ -60,8 +60,8 @@
    margin-right: 10px;
  }
  .base-opt-btn-item{
-    width:width: 90px;
-    border-radius: 0px;
+    width: 90px;
+    border-radius: 0;
     border:solid 1px #d7d7d7;
     background-color:#F3F3F3;
  }
@@ -206,7 +206,6 @@
 .conduct-ods1 {
     width: 127px;
     height: 49px;
-    text-align: right;
     padding: 15px;
     font-size: 14px;
     float: left;
@@ -215,11 +214,9 @@
 }.conduct-ods2 {
     width: 528px;
     height: 49px;
-    text-align: right;
     padding: 15px;
     font-size: 14px;
     float: left;
-    text-align: left;
     outline: 1px solid #EAEAEA;
     text-align: center;
 }
